Add missing drizzle dependency

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "better-sqlite3": "8.5.0",
     "clsx": "2.0.0",
     "drizzle-kit": "0.19.12",
+    "drizzle-orm": "0.28.2",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "next": "13.4.16",
